--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ body {
     color:lavenderblush;
 }
 
+
 .pad {
     padding-left: 10%;
     padding-right: 10%;
@@ -30,7 +31,21 @@ button.btn {
 }
 
 
+.card {
+    font-family: "Courier New";
+    color:lavenderblush;
+    background-color: #9c8cbd;
+    border-radius: 25px;
+    height: 100%;
+}
 
+.blog-link {
+    color:lavenderblush;
+}
+
+.date {
+    color:rgb(190, 172, 178);
+}
 
 @keyframes tophelp {
     from {top: -75px; opacity: 0}
@@ -40,13 +55,6 @@ button.btn {
 .purple-text {
     color: #55496e;
 }
-
-
-.jumbotron {
-    background-color: #e2d6fa;
-    text-align: center;
-}
-
 
 .form-signin {
     width: 100%;
@@ -63,6 +71,7 @@ button.btn {
     height: auto;
     padding: 10px;
     font-size: 16px;
+    font-family: "Courier New";
 }
 .form-signin .form-control:focus {
     z-index: 2;
