--- a/views/pages/displayallposts.handlebars
+++ b/views/pages/displayallposts.handlebars
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark mb-4" id="home">
-        <a class="navbar-brand" href="/"><img src="/public/images/home.png" alt="Logo" width="100" height="100"></a>
+       <a class="navbar-brand" href="/"><img src="/public/images/home.png" alt="Logo" width="70" height="70"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,13 +13,46 @@
                     <a class="nav-link" href="/posts">Posts</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-            </ul>
+             {{#if login}} 
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+            {{else}}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/upload">Create</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            {{/if}}
         </div>
     </nav>
 </header>
+
+{{#if isPost}}    
+    <div class="container">
+        <div class="row">
+            {{#each post}}
+            <div class="col-md-12">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <a class="blog-link" href="/blogpost/{{this.title}}"><h4>{{this.title}}</h3></a>
+                        <h6 class="date" >Published: {{this.date}}</h6>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+    </div>
+{{else}}
+    <p> Nothing to see here (yet!) </p>
+{{/if}}
+
 
 
