--- a/views/pages/home.handlebars
+++ b/views/pages/home.handlebars
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark mb-4" id="home">
-        <a class="navbar-brand" href="/"><img src="/public/images/home.png" alt="Logo" width="100" height="100"></a>
+        <a class="navbar-brand" href="/"><img src="/public/images/home.png" alt="Logo" width="70" height="70"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,11 +13,24 @@
                     <a class="nav-link" href="/posts">Posts</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-            </ul>
+             {{#if login}} 
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+            {{else}}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/upload">Create</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            {{/if}}
         </div>
     </nav>
 </header>
