--- a/views/pages/displayonepost.handlebars
+++ b/views/pages/displayonepost.handlebars
@@ -24,8 +24,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/upload">Create</a>
                     </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
@@ -35,5 +33,31 @@
     </nav>
 </header>
 
+<div class="container mt-5 ">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <article>
+                    <!-- Post header-->
+                    <header class="mb-4">
+                        <!-- Post title-->
+                        <h1 class="fw-bolder mb-1">{{post.title}}</h1>
+                        <h6 class="fw-bolder mb-1" id="date">Posted on {{post.date}} by Sanjana Madhu</h6>
+                        {{!-- <!-- Post meta content-->
+                        <div class="text-muted fst-italic mb-2">Posted on January 1, 2023 by Start Bootstrap</div>
+                        <!-- Post categories-->
+                        <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a> --}}
+                    </header>
+                    <!-- Preview image figure-->
+                    {{!-- <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure> --}}
+                    <!-- Post content-->
+                    <section class="mb-5 content-space">
+                        <p class="fs-5 mb-4">{{post.content}}</p>
+                        {{!-- <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
+                        <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
+                        <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
+                        <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p> --}}
+                    </section>
+                </article>
 
-<p> Display post here</p>
+
