--- a/views/pages/home.handlebars
+++ b/views/pages/home.handlebars
@@ -34,6 +34,8 @@
 </header>
 
 <div class="pad">
-    <h1 class="display-3" id="title">Hello there, I'm Sanjana.</h1>
+    <h1 class="display-3" id="title">Hello, I'm Sanjana.</h1>
     <p class="display-5" id="home">Welcome to my personal website/blog</p>
 </div>
+
+<hr>
