--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
         <div class="container text-center">
             <a href="https://www.linkedin.com/in/sanjana-madhu-52285819a/"><i class="fa fa-linkedin"></i></a>
             <a href="https://github.com/smadhu247"><i class="fa fa-github"></i></a>
+            <a href="mailto:sanjana.s.madhu@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
     </footer>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
