--- a/views/pages/home.handlebars
+++ b/views/pages/home.handlebars
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">About Me</a>
+                    <a class="nav-link" href="/">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/posts">Posts</a>
@@ -33,9 +33,79 @@
     </nav>
 </header>
 
-<div class="pad">
-    <h1 class="display-3" id="title">Hello, I'm Sanjana.</h1>
-    <p class="display-5" id="home">Welcome to my personal website/blog</p>
+{{!-- <div class="row">
+    <div class="pad">
+        <h1 class="display-3" id="title">Hello, I'm Sanjana.</h1>
+        <div id="home">
+            <p class="display-5">Welcome to my personal website/blog!</p>
+            I enjoy the pursuit of craft, solving complex problems, and mentoring others.
+            <br>
+            <br>
+            I'm inquisitive by nature and love exploring this beautiful world. I also enjoy volunteering and meeting new people.
+            <br>‍
+            <br>Outside of work I enjoy travel, hiking, photography, and longbow archery.
+            <br>
+        </div>
+    </div>
+    <div class="col-xs-6">
+       <img src="https://www.tutorialspoint.com/javafx/images/javafx-mini-logo.jpg">
+    </div>
+</div> --}}
+{{!-- 
+<div class="container">
+    <div class="row">
+        <div class="col-8">
+            <div class="pad-text">
+                <h1 class="display-3" id="title">Hello, I'm Sanjana.</h1>
+                <div id="home">
+                    <p class="display-5">Welcome to my personal website/blog!</p>
+                    I enjoy the pursuit of craft, solving complex problems, and mentoring others.
+                    <br>
+                    <br>
+                    I'm inquisitive by nature and love exploring this beautiful world. I also enjoy volunteering and meeting new people.
+                    <br>‍
+                    <br>Outside of work I enjoy travel, hiking, photography, and longbow archery.
+                    <br>
+                </div>
+            </div>
+        </div>
+        <div class="pad-pic">
+            <div class="col-4">
+                <img src="/public/images/Sanjana.jpg" width="200%" height="200%">
+            </div>
+        </div> 
+    </div>  
+</div>
+
+<hr> --}}
+
+<div class="col-sm-2">
+    <img class="pad-squig1"src="/public/images/squiggle_vert.png">
+</div>
+
+<div class="container">
+   <div class="row">
+        <div class="col-md-6">
+            <h1 class="display-3" id="title">Hello, I'm Sanjana.</h1>
+            <div id="home">
+                    <p class="display-5">Welcome to my personal website/blog!</p>
+                    I am a dynamic student in pursuit of new challanges and continuous learning.
+                    <br>
+                    <br>
+                    I'm inquisitive by nature and love exploring this beautiful world. I also enjoy volunteering and meeting new people.
+                    <br>‍
+                    <br>Outside of work I enjoy travel, hiking, photography, and longbow archery.
+                    <br>
+                </div>
+        </div>
+        <div class="col-md-5">
+            <img id="pad-pic" src="/public/images/Sanjana.jpg">
+        </div>
+        <div class="col-sm-1">
+            <img class="pad-squig2" src="/public/images/squiggle_hori.png">
+        </div>
+   </div>
+   <hr>
 </div>
 
 <hr>
